Updates Cities and Restaurants pages - 10/27

--- a/cities.html
+++ b/cities.html
@@ -44,7 +44,7 @@
 </head>
 
 <body onload="browseCities()">
-    <h1>Cuisines</h1>
+    <h1>Cities</h1>
 
     [ <a href="restaurants.html">Restaurants</a> | <a href ="cities.html">Cities</a> | <a href="cuisines.html">Cuisines</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> ]
     
@@ -76,14 +76,14 @@
                 <td align="center">Los Angeles</td>
             </tr>
             <tr>
-                <td><a href="#" onClick="updateRestaurant('this.restaurant_id')">Edit</a></td>
-                <td><a href="#" onClick="deleteRestaurant('this.restaurant_id')">Delete</a></td>
+                <td><a href="#" onClick="updateCity('this.city_id')">Edit</a></td>
+                <td><a href="#" onClick="deleteCity('this.city_id')">Delete</a></td>
                 <td align="center">4</td>
                 <td align="center">San Diego</td>
             </tr>
             <tr>
-                <td><a href="#" onClick="updateRestaurant('this.restaurant_id')">Edit</a></td>
-                <td><a href="#" onClick="deleteRestaurant('this.restaurant_id')">Delete</a></td>
+                <td><a href="#" onClick="updateCity('this.city_id')">Edit</a></td>
+                <td><a href="#" onClick="deleteCity('this.city_id')">Delete</a></td>
                 <td align="center">5</td>
                 <td align="center">Seattle</td>
             </tr>
