--- a/cities.html
+++ b/cities.html
@@ -101,13 +101,21 @@
         </form>
     </div> <!-- inserts a new Cuisine -->
     <p>&nbsp;</p>
+
     <div id="update">
         <form method="POST" id="updateCity">
             <legend><strong>Update City</strong></legend>
                 <fieldset class="fields">
-                    <input type="hidden" name="updateCityID" value="1">
-                    <label> ID: </label> 1
-                        <label> Name: </label> <input type="text" name="city_name" value="San Francisco">
+                    <input type="hidden" name="cityID" id="updateCityID" value="1">
+                    <label> ID: </label>
+                        <select>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                        <label> Name: </label> <input type="text" name="city_name">
                 </fieldset>
                     <input class="btn" type="submit" id="updateSaveCity" value="Save Update to City">
                     <input class="btn" type="button" value="Cancel" onClick="browseCities()">
