--- a/users.html
+++ b/users.html
@@ -131,6 +131,8 @@
                 <li><a class="dropdown-item" href="#">San Francisco</a></li>
                 <li><a class="dropdown-item" href="#">Portland</a></li>
                 <li><a class="dropdown-item" href="#">Los Angeles</a></li>
+                <li><a class="dropdown-item" href="#">San Diego</a></li>
+                <li><a class="dropdown-item" href="#">Seattle</a></li>
               </ul>
     </fieldset>
         <input class="btn btn-primary btn-sm" type="submit" id="addUser" value="Add User">
@@ -154,6 +156,8 @@
               <li><a class="dropdown-item" href="#">San Francisco</a></li>
               <li><a class="dropdown-item" href="#">Portland</a></li>
               <li><a class="dropdown-item" href="#">Los Angeles</a></li>
+              <li><a class="dropdown-item" href="#">San Diego</a></li>
+              <li><a class="dropdown-item" href="#">Seattle</a></li>
             </ul>
   </fieldset>
       <input class="btn btn-primary btn-sm" type="submit" id="addUser" value="Add User">
