--- a/users.html
+++ b/users.html
@@ -50,7 +50,7 @@
 <body onload="browseUsers()">
 <h1>Users</h1>
 
-[ <a href="restaurants.html">Restaurants</a> | <a href="users.html">Users</a> | <a href="cities.html">Cities</a> | <a href="review.html">Reviews</a> | <a href="restaurant_cuisines.html">Restaurant Cuisines</a>]
+[ <a href="index.html">Home</a> | <a href="restaurants.html">Restaurants</a> | <a href="users.html">Users</a> | <a href="cities.html">Cities</a> | <a href="review.html">Reviews</a> | <a href="restaurant_cuisines.html">Restaurant Cuisines</a>]
 
 <div id="search">
   <form class="p-1 mb-1 bg-light border-bottom">
