Deleted display all forms, adjusted home page

--- a/cuisines.html
+++ b/cuisines.html
@@ -67,7 +67,7 @@
 <body onload="browseCuisines()">
     <h1>Cuisines</h1>
 
-    [ <a href="/">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
+    [ <a href="index.html">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
 
     <div id="search">
         <form class="p-1 mb-1 bg-light border-bottom">
@@ -80,7 +80,6 @@
             <!-- <button id="search-button" type="button" class="btn btn-primary">
                 <i class="fas fa-search"></i> -->
         </p>
-        <p><a href="#" onClick="showAll()">Display all forms: Add, Update, or Delete an entry</a></p>
         <p><button><a href="#" onClick="newCuisine()">Add a New Cuisine</a></button></p>
 
         <table id="cuisines" class="table table-striped table-bordered table-hover" border="1" cellpadding="5"
