--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header><h1>Grubmaster Database</h1></header>
 
     <nav className="App-header">
-        <button><a href="/">Home</a></button>
+        <button><a href="index.html">Home</a></button>
         <button><a href="restaurants.html">Restaurants</a></button>
         <button><a href="cuisines.html">Cuisines</a></button>
         <button><a href="cities.html">Cities</a></button>
