--- a/restaurant_has_cuisines.html
+++ b/restaurant_has_cuisines.html
@@ -56,7 +56,7 @@
 <body onload="browseRestaurantCuisines()">
     <h1>Restaurants' Cuisines</h1>
 
-    [ <a href="/">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
+    [ <a href="index.html">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
     
     <div id="search">
         <form class="p-1 mb-1 bg-light border-bottom">
