--- a/restaurants.html
+++ b/restaurants.html
@@ -85,7 +85,7 @@
 <body onload="browseRestaurants()">
     <h1>Restaurants</h1>
 
-    [ <a href="/">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
+    [ <a href="index.html">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
     
     <div id="search">
         <form class="p-1 mb-1 bg-light border-bottom">
@@ -95,7 +95,6 @@
     
     <div id="browse">
         <!-- <p><input type="text" id="searchRestaurantInput" onkeyup="myFunction()" placeholder="Search for a restaurant..."> -->
-        <p><a href="#" onClick="showAll()">Display all forms: Add, Update, or Delete an entry</a></p>
         <p><button><a href="#" onClick="newRestaurant()">Add a New Restaurant</a></button></p>
 
         <table id="restaurants" class="table table-striped table-bordered table-hover align-middle justify-content-center" border="1" cellpadding="5"
