--- a/cities.html
+++ b/cities.html
@@ -59,7 +59,7 @@
 <body onload="browseCities()">
     <h1>Cities</h1>
 
-    [ <a href="/">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
+    [ <a href="index.html">Homepage</a> | <a href="restaurants.html">Restaurants</a> | <a href ="cuisines.html">Cuisines</a> | <a href="cities.html">Cities</a> | <a href="users.html">Users</a> | <a href="reviews.html">Reviews</a> | <a href ="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
     
     <div id="search">
         <form class="p-1 mb-1 bg-light border-bottom">
@@ -69,7 +69,6 @@
 
     <div id="browse">
         <!-- <p><input type="text" id="searchCityInput" onkeyup="myFunction()" placeholder="Search for a city..."></p> -->
-        <p><a href="#" onClick="showAll()">Display all forms: Add, Update, Delete an entry</a></p>
         <p><button><a href="#" onClick="newCity()">Add New City</a></button></p>
 
         <table id="cities" class="table table-striped table-bordered table-hover" border="1" cellpadding="5"
