--- a/cities.html
+++ b/cities.html
@@ -59,7 +59,7 @@
 <body onload="browseCities()">
     <h1>Cities</h1>
 
-    [ <a href="index.html">Home</a> | <a href="restaurants.html">Restaurants</a> | <a href="users.html">Users</a> | <a href="cities.html">Cities</a> | <a href="review.html">Reviews</a> | <a href="restaurant_cuisines.html">Restaurant Cuisines</a>]
+    [ <a href="index.html">Home</a> | <a href="restaurants.html">Restaurants</a> | <a href="users.html">Users</a> | <a href="cities.html">Cities</a> | <a href="review.html">Reviews</a> | <a href="restaurant__has_cuisines.html">Restaurants' Cuisines</a>]
     
     <div id="search">
         <form class="p-1 mb-1 bg-light border-bottom">
