--- a/reviews.html
+++ b/reviews.html
@@ -41,7 +41,7 @@
 <body onload="browseReviews()">
 <h1>Reviews</h1>
 
-[ <a href="index.html">Home</a> | <a href="restaurants.html">Restaurants</a> | <a href="users.html">Users</a> | <a href="cities.html">Cities</a> | <a href="reviews.html">Reviews</a> | <a href="restaurant_cuisines.html">Restaurant Cuisines</a>]
+[ <a href="index.html">Home</a> | <a href="restaurants.html">Restaurants</a> | <a href="users.html">Users</a> | <a href="cities.html">Cities</a> | <a href="reviews.html">Reviews</a> | <a href="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
 
 <div id="search">
   <form class="p-1 mb-1 bg-light border-bottom">
