--- a/users.html
+++ b/users.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit=no">
 <title>Users</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script language="JavaScript">
 		function showform(dowhat) {
 			/*
@@ -44,7 +44,6 @@
     function deleteUser(pid) { showform ('delete'); }
     function browseUsers() { showform ('browse'); }
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 
 <body onload="browseUsers()">
@@ -54,78 +53,84 @@
 
 <div id="search">
   <form class="p-1 mb-1 bg-light border-bottom">
-    <input type="search" class="form-control" autocomplete="false" placeholder="Type to search by user name...">
+    <input type="text" id="searchUserInput" class="form-control" autocomplete="false" placeholder="Search for a user...">
   </form>
 </div>  
 
 <div id="browse">
-<table class = table table-bordered>
-  <thead>
+  <p><button><a href="#" onClick="newUser()">Add New User</a></button></p>
+
+  <table id="users" class="table table-striped table-bordered table-hover" border="1" cellpadding="5"
+  data-search="true"
+  data-filter-control="true"
+  data-show-columns="true"
+  data-visible="true">
+  <thead class="table-dark">  
     <tr>
-      <th scope="row"><a href="#" onClick="newUser()">New</a></th>
-      <th scope="col"></th>
-      <th scope="col">ID</th>
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">City</th>
-    </tr>
-  </thead>    
-  <tbody><tr>
-    <th scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
-    <th scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
+        <th scope="col">ID</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">City</th>
+        <th scope="col" colspan="2">Actions</th>
+      </tr>
+  </thead>  
+  <tbody>
+  <tr>
     <td>1</td>
     <td >Michael</td>
     <td>Scott</td>
     <td>Los Angeles</td>
+    <td scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
+    <td scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
   </tr>
   <tr>
-    <th scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
-    <th scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
     <td>2</td>
     <td>Pamela</td>
     <td>Beesly</td>
     <td>Los Angeles</td>
+    <td scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
+    <td scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
   </tr>
   <tr>
-    <th scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
-    <th scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
     <td>3</td>
     <td>Jim</td>
     <td>Halpert</td>
     <td>Los Angeles</td>
+    <td scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
+    <td scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
   </tr>
   <tr>
-    <th scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
-    <th scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
     <td>4</td>
     <td>Dwight</td>
     <td>Schrute</td>
     <td>Portland</td>
+    <td scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
+    <td scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
   </tr>
   <tr>
-    <th scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
-    <th scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
     <td>5</td>
     <td>Angela</td>
     <td>Martin</td>
     <td>San Francisco</td>
+    <td scope="row"><a href="#" onClick="updateUser('this.UserID')">Edit</a></td>
+    <td scope="row"><a href="#" onclick="deleteUser('this.UserID')">Delete</a></td>
   </tr>
   </tbody>
 </table>
 </div> <!-- browse -->
 <p>&nbsp;</p>
 
-<div id="insert">
+<div id="insert" style="display: block">
   <form method="POST" id="addUser">
       <legend><strong>Add User</strong></legend>  
         <fieldset class="fields">
           <form class="p-1 mb-1 bg-light border-bottom">            
-              <input class="form-control form-control-lg" type="text" placeholder="First Name*" aria-label=".form-control-lg example">
-              <input class="form-control form-control-lg" type="text" placeholder="Last Name*" aria-label=".form-control-lg example">
-              <input class="form-control form-control-lg" type="text" placeholder="E-mail" aria-label=".form-control-lg example">
-              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <label>First Name*</label> <input type="text" name="first_name">
+            <label>Last Name*</label> <input type="text" name="last_name">
+            <label>E-mail Address</label> <input type="text" name="email_address">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" span="8">
                 City*
-              </button>
+            </button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#"></a>&nbsp;</li>
                 <li><a class="dropdown-item" href="#">San Francisco</a></li>
@@ -135,22 +140,22 @@
                 <li><a class="dropdown-item" href="#">Seattle</a></li>
               </ul>
     </fieldset>
-        <input class="btn btn-primary btn-sm" type="submit" id="addUser" value="Add User">
-        <input class="btn btn-primary btn-sm" type="button" value="Cancel" onClick="browseUsers()">
+        <input class="btn" type="submit" id="addUser" value="AddUser">
+        <input class="btn" type="button" value="Cancel" onClick="browseUsers()">
 </form> 
-</div><!-- insert -->
+</div><!-- insert a New User -->
 <p>&nbsp;</p>
 <div id="update">
   <form method="POST" id="UpdateUser">
       <legend><strong>Update User</strong></legend>
       <fieldset class="fields">
         <form class="p-1 mb-1 bg-light border-bottom">            
-            <input class="form-control form-control-lg" type="text" placeholder="First Name*" aria-label=".form-control-lg example">
-            <input class="form-control form-control-lg" type="text" placeholder="Last Name*" aria-label=".form-control-lg example">
-            <input class="form-control form-control-lg" type="text" placeholder="E-mail" aria-label=".form-control-lg example">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <label>First Name</label> <input type="text" name="first_name">
+          <label>Last Name</label> <input type="text" name="last_name">
+          <label>E-mail Address</label> <input type="text" name="email_address">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" span="8">
               City*
-            </button>
+          </button>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#"></a>&nbsp;</li>
               <li><a class="dropdown-item" href="#">San Francisco</a></li>
@@ -160,8 +165,8 @@
               <li><a class="dropdown-item" href="#">Seattle</a></li>
             </ul>
   </fieldset>
-      <input class="btn btn-primary btn-sm" type="submit" id="addUser" value="Add User">
-      <input class="btn btn-primary btn-sm" type="button" value="Cancel" onClick="browseUsers()">
+      <input class="btn" type="submit" id="editUser" value="editUser">
+      <input class="btn" type="button" value="Cancel" onClick="browseUsers()">
 </form> 
 </div><!-- update -->
 <p>&nbsp;</p>
@@ -169,14 +174,32 @@
   <form method="POST" id="deleteUser">
       <legend><strong>Delete User</strong></legend>
           <fieldset class="fields">
-          <p>Are you sure you wish to delete the following?</p>
-          <input type="hidden" name="UserID" id="deleteUserID" value="1">
-          <label><strong>ID:</strong></label> 1
-            <label><strong>Name</strong></label> Michael Scott
-    </fieldset>
-    <input class="btn btn-primary btn-sm" type="submit" id="deleteUser" value="Delete User">
-    <input class="btn btn-primary btn-sm" type="button" value="Cancel" onClick="browseUsers()">
+            <p>Are you sure you wish to delete the following?</p>
+            <input type="hidden" name="UserID" id="deleteUserID" value="1">
+            <label><strong>ID:</strong></label> 
+            <label><strong>Name</strong></label>
+          </fieldset>
+          <input class="btn" type="submit" id="deleteUser" value="Delete User">
+          <input class="btn" type="button" value="Cancel" onClick="browseUsers()">
   </form> 
 </div><!-- delete -->
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<!-- Search function to search through users -->
+<script>
+  $(document).ready(function(){
+    $("#searchUserInput").on("keyup", function() {
+      let value = $(this).val().toLowerCase();
+      $("columns")
+      $("#users tr").filter(function() {
+        $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+      });
+    });
+  });
+</script>
+
 </body>
 </html>
