--- a/users.html
+++ b/users.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Users</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script language="JavaScript">
@@ -49,7 +49,7 @@
 <body onload="browseUsers()">
 <h1>Users</h1>
 
-[ <a href="index.html">Home</a> | <a href="restaurants.html">Restaurants</a> | <a href="users.html">Users</a> | <a href="cities.html">Cities</a> | <a href="review.html">Reviews</a> | <a href="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
+[ <a href="index.html">Home</a> | <a href="restaurants.html">Restaurants</a> | <a href="users.html">Users</a> | <a href="cities.html">Cities</a> | <a href="reviews.html">Reviews</a> | <a href="restaurant_has_cuisines.html">Restaurants' Cuisines</a>]
 
 <div id="search">
   <form class="p-1 mb-1 bg-light border-bottom">
