--- a/restaurants.html
+++ b/restaurants.html
@@ -170,12 +170,12 @@
     <div id="insert" style="display: block">
         <form method="POST" id="addRestaurant">
             <legend><strong>Add Restaurant</strong></legend>
+                <div><p>Labels with * are REQUIRED.</p></div>
                 <fieldset class="fields">
-                    <label>Name: </label> <input type="text" name="restaurant_name">
-                    <label>Website: </label> <input type="text" name="restaurant_website">
-                    <label>Email: </label> <input type="text" name="restaurant_email">
-                    <label>City: </label> <select name="city_name">
-                        <option value="0">&nbsp;</option>
+                    <label>Name: </label> <input type="text" name="restaurant_name" placeholder="Name*">
+                    <label>Website: </label> <input type="text" name="restaurant_website" placeholder="Website">
+                    <label>Email: </label> <input type="text" name="restaurant_email" placeholder="Email">
+                    <label> * City: </label> <select name="city_name">
                         <option value="1">San Francisco</option>
                         <option value="2">Portland</option>
                         <option value="3">Los Angeles</option>
@@ -221,13 +221,13 @@
     <div id="update">
         <form method="POST" id="updateRestaurant">
             <legend><strong>Update Restaurant</strong></legend>
+                <div><p>Labels with * are REQUIRED.</p></div>
                 <fieldset class="fields">
                     <input type="hidden" name="updateRestaurantID" value="1">
-                    <label> Name: </label> <input type="text" name="restaurant_name" value="Savor">
-                    <label> Website: </label> <input type="restaurant_website" value="https://savor.menu/">
-                    <label> Email: </label> <input type="restaurant_email">
-                    <label>City:</label> <select name="city_name">
-                            <option value="0">&nbsp;</option>
+                    <label> Name: </label> <input type="text" name="restaurant_name" placeholder="*Name">
+                    <label> Website: </label> <input type="restaurant_website" placeholder="Website">
+                    <label> Email: </label> <input type="restaurant_email" placeholder="Email">
+                    <label> City:</label> <select name="city_name" placeholder="City">
                             <option value="1">San Francisco</option>
                             <option value="2">Portland</option>
                             <option value="3">Los Angeles</option>
