updated extra space with extra space

--- a/cities.html
+++ b/cities.html
@@ -146,6 +146,7 @@
                     <input class="btn" type="button" value="Cancel" onClick="browseCities()">
         </form>
     </div>
+    <p>&nbsp;</p>
 
     <nav aria-label="Cities page navigation">
         <ul class="pagination">
