--- a/restaurants.html
+++ b/restaurants.html
@@ -283,6 +283,7 @@
                 <input class="btn" type="button" value="cancel" onClick="browseRestaurants()">
         </form>
     </div> <!-- delete a restaurant -->
+    <p>&nbsp;</p>
 
     <nav aria-label="Restaurants page navigation">
         <ul class="pagination">
